...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please register:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gm1-qf-09D">
                                <rect key="frame" x="16" y="275" width="343" height="20"/>
                                <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="17"/>
                                <color key="textColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IHE-Kr-dJV">
                                <rect key="frame" x="16" y="312" width="343" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                <connections>
                                    <outlet property="delegate" destination="nLD-qg-JP5" id="w3d-8G-b4s"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HzM-Lq-eaj">
                                <rect key="frame" x="16" y="350" width="343" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                <connections>
                                    <outlet property="delegate" destination="nLD-qg-JP5" id="Bpm-OF-ZBI"/>
...
                                <color key="backgroundColor" red="0.91028096459999996" green="0.91504683360000005" blue="0.91504683360000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="NIJ-DT-fNj"/>
                                    <constraint firstAttribute="width" constant="190" id="wLo-Kc-lZs"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="Sign Up">
                                    <color key="titleColor" red="0.42290820550000002" green="0.64836224649999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="signupOrLogin:" destination="nLD-qg-JP5" eventType="touchUpInside" id="f5v-tu-aOs"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="257" y="542" width="60" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="60" id="0gP-Vg-Zqb"/>
                                    <constraint firstAttribute="height" constant="30" id="k7H-Yw-Pc1"/>
                                </constraints>
                                <fontDescription key="fontDescription" name=".AppleSystemUIFontEmphasized" family=".AppleSystemUIFont" pointSize="16"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="changeSignupMode:" destination="nLD-qg-JP5" eventType="touchUpInside" id="AsT-Si-zHs"/>
                                </connections>
                            </button>
...
