...
        let pfItem = PFObject(className:"Item")
        
        let postItemInfo = PostItemInfo(itemName: itemTitleTextField.text!, price: (itemPrice.text! as NSString).floatValue, description: itemDescription.text!)
        
        if postItemInfo.error {
            
            createOkAlert(title: "Error in form", message: postItemInfo.errorMessage!)
            
        } else {
            
            showActivityIndicator()
            
            pfItem["title"] = itemTitleTextField.text
...
